Use the mmistake theme with canned data.

--- a/_config.yml
+++ b/_config.yml
@@ -7,26 +7,32 @@
 #
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Nigel Gott's Dev Blog 
+title: Nigel Gott's Dev Blog
 email: nigel.gott@gmail.com 
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
     Trite ramblings.
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.nigelgott.com" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  nigel-gott 
+baseurl: ""
+url: "https://www.nigelgott.com"
+github_username:  nigel-gott
+minimal_mistakes_skin: default
+search: true
+permalink: /:title/
+paginate: 5 # amount of posts to show
+paginate_path: /page:num/
+repository: nigel-gott/nigel-gott.github.io
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+remote_theme: "mmistakes/minimal-mistakes@4.16.5"
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jemoji
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -39,3 +45,48 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+include:
+  - _pages
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: false
+      comments: false
+      share: false
+      related: false
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      read_time: false
+      comments: false
+      share: false
+      related: false
+
+author:
+  name             : "Nigel Gott"
+  avatar           : "/assets/images/bio-photo.jpg"
+  bio              : "Nope"
+  location         : "London"
+  email            : "nigel.gott@gmail.com"
+  links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: mailto:nigel.gott@email.com
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/nigel-gott"
+
+tag_archive:
+  type: liquid
+  path: /tags/
