--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://www.nigelgott.com/"
+baseURL = "https://www.nigelgott.com/"
 languageCode = "en-us"
 title = "Nigel Gott's Blog"
 theme = "cactus"
